crates/ruff_linter/src/rules/refurb/snapshots/ruff_linter__rules__refurb__tests__regex-flag-alias_FURB167.py.snap
---
source: crates/ruff_linter/src/rules/refurb/mod.rs
---
FURB167 [*] Use of regular expression alias `re.I`
  --> FURB167.py:13:43
   |
12 |     # FURB167
13 |     if re.search("^hello", "hello world", re.I):
   |                                           ^^^^
14 |         pass
   |
help: Replace with `re.IGNORECASE`
   |
12 |     # FURB167
   -     if re.search("^hello", "hello world", re.I):
13 +     if re.search("^hello", "hello world", re.IGNORECASE):
14 |         pass
   |

FURB167 [*] Use of regular expression alias `re.I`
  --> FURB167.py:21:40
   |
20 |     # FURB167
21 |     if search("^hello", "hello world", I):
   |                                        ^
22 |         pass
   |
help: Replace with `re.IGNORECASE`
   |
1  + import re
2  | def func():
--------------------------------------------------------------------------------
21 |     # FURB167
   -     if search("^hello", "hello world", I):
22 +     if search("^hello", "hello world", re.IGNORECASE):
23 |         pass
   |
